package pers.caijx.uml.dependence;

/**
 * @ClassName PersonDao
 * @Description: TODO
 * @Author Think
 * @Date 2019/10/7
 * @Version V1.0
 **/
public class PersonDao {
}
